feat: add backend tests and code quality improvements
- Add 60 backend tests across 7 test classes (controllers, services)
- Add UserDto, countUsers/countOrders, CreateOrderRequest.toDomain()
- Fix bean cycle: move password encoding to AuthController
- Update README, AGENTS.md, and add FUNDING.yml